Fixed rebase mistakes 2
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>